spotx-nosdk-controller 1.6.0

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,21 +41,41 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.6.0
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Animate all timers at 4 FPS from HTMLVideoElement.ontimeupdate, instead of 1 FPS with timers.</li>
+                        <li>Standardized interface for receiving time updates so we can increase the frequency if needed.</li>
+                        <li>Re-enabled progress bars as we are now updating duration from the MP4.</li>
+                        <li>Fixed missing message method on Android.</li>
+                        <li>Fixed failure to parse duration after TS3.7 update.</li>
+                        <li>Typescript 3.7 update.</li>
+                        <li>Add developer documentation.</li>
+                        <li>Fixed some incorrect default values, and don't fire bad API keys to the server.</li>
+                        <li>Localization support.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.5.0
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
                     <ul>
                         <li>Tap to Fullscreen.</li>
-<li>Learn More button (clickthru_button).</li>
-<li>Learn More button localized (clickthru_button_localized).</li>
-<li>Advertiser Banner localized (advertiser_banner_localized).</li>
-<li>Skip Time label (skip_time_label).</li>
-<li>Skip Time label localized (skip_time_label_localized).</li>
-<li>Pod Label (pod_label).</li>
-<li>Pod Label localized (pod_label_localized).</li>
-<li>Show Time Remaining (show_time_remiaining).</li>
-<li>Show Skip Time Remaining (show_skip_time_remaining).</li>
-<li>SChain support.</li>
+                        <li>Learn More button (clickthru_button).</li>
+                        <li>Learn More button localized (clickthru_button_localized).</li>
+                        <li>Advertiser Banner localized (advertiser_banner_localized).</li>
+                        <li>Skip Time label (skip_time_label).</li>
+                        <li>Skip Time label localized (skip_time_label_localized).</li>
+                        <li>Pod Label (pod_label).</li>
+                        <li>Pod Label localized (pod_label_localized).</li>
+                        <li>Show Time Remaining (show_time_remiaining).</li>
+                        <li>Show Skip Time Remaining (show_skip_time_remaining).</li>
+                        <li>SChain support.</li>
                     </ul>
                 </div>
             </div>
