spotx-mobile-ios 3.1.1 spotx-mobile-android 3.1.1

--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -40,6 +40,27 @@
             <div class="box_full blue bluebackgroundlight bold">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString">
+                    3.1.1
+                </div>
+                <div class="box_left_versionString package_description blueborderlight">
+                    <ul>
+                        <li>Minor improvements and bug fixes.</li>
+                        <li>Fix Null Crash :: DruidReportBase updated_at.</li>
+                        <li>Logout User - Even with No Network Access.</li>
+                        <li>Channel & Campaign Data Discrepancy.</li>
+                        <li>APP-600 :: Somehow some newer code was overwritten by older code, causing the bug.</li>
+                        <li>Data Bug Fixes.</li>
+                        <li>Delete some of the old API classes that were accidentally brought back.  Also, make SDKListRequest use the /1/ endpoint rather than /1.0/.</li>
+                        <li>Use Platform Api Version /1/.</li>
+                        <li>Merge feature/api-data-layer into origin/dev.</li>
+                        <li>LOD Notifications server no longer has -server affix.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full blue bluebackgroundlight">
+                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_versionString">
                     3.1.0
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
