--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -40,6 +40,40 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    3.1.1
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>Minor improvements and bug fixes.</li>
+                        <li>Bug Fix :: NotificationListView - No Pub View Not Visible.</li>
+                        <li>MVVM Part 1: Remove User from CoreData.</li>
+                        <li>Tons of Style Fixes.</li>
+                        <li>Use Platform Api Version /1/.</li>
+                        <li>LOD Notifications server no longer has -server affix.</li>
+                        <li>iOS: App Coordinator initial commit.</li>
+                        <li>Update to swift 5 iOS 11.</li>
+                        <li>The APNS certs in the /certs directory where deleted and replaced with the distribution/development certs.  Moving them to their own /apns folder.</li>
+                        <li>Need to set the AppContext.shared.loggedInUser when the UserInfo call returns, rather than while it's running.</li>
+                        <li>iOS Enterprise Jenkins AppCenter.</li>
+                        <li>Fix issue in info.plist.</li>
+                        <li>First revision of the data warning UI. X button is on top of the border.</li>
+                        <li>Use a new close button for the data warning. Stop rounding the corners, and give it a nice drop-shadow. Space out the lines.</li>
+                        <li>Add a timer to close the data warning after a delay.</li>
+                        <li>Data Warning popup.</li>
+                        <li>Fix plist and version information for iOS Distribution.</li>
+                        <li>Add the "limit" fix to the Grouping of the Druid Queries to now get all of the data.</li>
+                        <li>Use Campaign List For NotificationsSettingType List.</li>
+                        <li>Guard against blank Druid data coming back.</li>
+                        <li>Take out deal_start and deal_end filter from the Druid Deal Request.</li>
+                        <li>Remove the unused Druid Reports that were written a long time ago, but never used.</li>
+                        <li>DemoDruidClient and data generator.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     3.1.0
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
