spotx-mobile-ios 3.1.2

--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -40,6 +40,32 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    3.1.2
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>Encode Username for Notification Service Requests.</li>
+                        <li>Zero-fill dates missing from DRUID report.</li>
+                        <li>Set Correct Username in User Object.</li>
+                        <li>Podfile updates - AppCenter Fixed rounding logic in method that uses toNearestOrAwayFromZero rounding rule.</li>
+                        <li>Added missing play_positions to decode.</li>
+                        <li>iOS MVVM - various bug fixes.</li>
+                        <li>Use Nil for All Campaigns NotificationSetting.</li>
+                        <li>Fix for some channels not showing when logged in as a pub.</li>
+                        <li>Fix for campaign edit crash.</li>
+                        <li>Update copyright year to 2020.</li>
+                        <li>Fix app_name in Fastfile.</li>
+                        <li>Campaign refactor.</li>
+                        <li>iOS - Channel MVVM Refactor.</li>
+                        <li>Update docs on installing apn-test.</li>
+                        <li>UISupportedInterfaceOrientations for iPad.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     3.1.1
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
