spotx-mobile-android 3.1.2

--- a/website/spotx-mobile-android/index.html
+++ b/website/spotx-mobile-android/index.html
@@ -40,6 +40,91 @@
             <div class="box_full blue bluebackgroundlight bold">
                 <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
                 <div class="box_left_versionString">
+                    3.1.2
+                </div>
+                <div class="box_left_versionString package_description blueborderlight">
+                    <ul>
+                      <li>Rework HistoryList Logic</li>
+                      <ul>
+                        <li>LoginActivity.</li>
+                        <li>TabsAActivity.</li>
+                        <li>NotificiationHistory.</li>
+                        <li>NotificationHistoryListRequest.</li>
+                        <li>NotificationHistoryListFragment.</li>
+                        <li>NotificationHistoryAdapter.</li>
+                      </ul>
+                      <li>Simplify NotificationSettingTypeList View Hierarchy</li>
+                      <ul>
+                        <li>NotificationSettingTypeFragment :: Clean Up.</li>
+                        <li>NotificationSettingTypeList :: Add Header Type.</li>
+                        <li>fragment_notification_setting_type :: Clean Up Layout.</li>
+                        <li>item_notification_setting_type_header :: Header Row Layout.</li>
+                      </ul>
+                      <li>Allow traffic over HTTP.</li>
+                      <li>Channel/Campaign Detail - Only Show Arrows when Percent Change Exists.</li>
+                      <li>Notificiations History Crash Fix</li>
+                      <ul>
+                        <li>ChannelCampaignListAdapter :: Only Show Arrows when we have a % diff.</li>
+                        <li>TabsActivity :: Increase Suspend Timeout to 30 minutes & Util Logout.</li>
+                        <li>build.gradle :: Increase Gradle Version.</li>
+                        <li>item_notification_setting :: Decrease Toggle Button Margin.</li>
+                        <li>fragment_notification_settings :: Decrease Toggle Button Margin.</li>
+                        <li>NotificationHisotryListRequest :: Only Show the Last 30 Days of Notifications.</li>
+                        <li>UserCleanUpTask :: Deletes Current User Data & Navigates Back to Login.</li>
+                        <li>Settings Fragment :: Util Logout.</li>
+                        <li>Utils :: Util Logout.</li>
+                      </ul>
+                      <li>Tons of Style Fixes</li>
+                      <ul>
+                        <li>Notification Settings</li>
+                        <ul>
+                          <li>Gray Chevrons.</li>
+                          <li>Spacer between items.</li>
+                          <li>Increase "Allow Notifications" row height.</li>
+                          <li>Decrease Toggle & Chevron Spacing.</li>
+                        </ul>
+                        <li>Notification Setting Type</li>
+                        <ul>
+                          <li>Lighter Gray Helper Text.</li>
+                          <li>Increase Setting Type row height.</li>
+                          <li>Increase "Select All/None" row height.</li>
+                          <li>Whole view scrollable.</li>
+                          <li>Lighter Gray List Divider.</li>
+                        </ul>
+                        <li>Notification History</li>
+                        <ul>
+                          <li>Gray Chevrons.</li>
+                          <li>Shorten table view.</li>
+                          <li>Increase "Enable Notifications" button margins.</li>
+                          <li>Add "Yesterday", and "Last Week" Section Headers.</li>
+                          <li>Lighter Gray Section Header.</li>
+                          <li>Lighter Gray Notification Time, Date, and Type.</li>
+                          <li>Increase Chrevon size, & decrease flag size.</li>
+                          <li>Spacer Between Items.</li>
+                          <li>Dynamic Alpha for "Clear" Notifications MenuItem.</li>
+                        </ul>
+                        <li>Channel/Campaign List</li>
+                        <ul>
+                          <li>Gray Chevrons.</li>
+                          <li>Lighter Gray List Divider.</li>
+                        </ul>
+                        <li>Settings</li>
+                        <ul>
+                          <li>Gray Chevrons.</li>
+                          <li>Section Header for "Notification Settings" Row.</li>
+                        </ul>
+                        <li>Acknowledgements</li>
+                        <ul>
+                          <li>Gray Chevrons.</li>
+                        </ul>
+                      </ul>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full blue bluebackgroundlight">
+                <div class="box_left_titlebar bluebackground">spotx-mobile-android</div>
+                <div class="box_left_versionString">
                     3.1.1
                 </div>
                 <div class="box_left_versionString package_description blueborderlight">
