--- a/website/spotx-mobile-ios/index.html
+++ b/website/spotx-mobile-ios/index.html
@@ -40,6 +40,19 @@
             <div class="box_full teal tealbackgroundlight bold">
                 <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
                 <div class="box_left_versionString">
+                    3.1.3
+                </div>
+                <div class="box_left_versionString package_description tealborderlight">
+                    <ul>
+                        <li>Fixed issue with DateTimeZone logic causing dashboard graph rendering issues.</li>
+                        <li>Fixed issue where Campaigns and Channels list views weren't updating totals based on displayable items.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full teal tealbackgroundlight">
+                <div class="box_left_titlebar tealbackground">spotx-mobile-ios</div>
+                <div class="box_left_versionString">
                     3.1.2
                 </div>
                 <div class="box_left_versionString package_description tealborderlight">
