spotx-nosdk-controller 1.7.1

--- a/website/spotx-nosdk-controller/index.html
+++ b/website/spotx-nosdk-controller/index.html
@@ -41,6 +41,24 @@
             <div class="box_full orange orangebackgroundlight bold">
                 <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
                 <div class="box_left_versionString">
+                    1.7.1
+                </div>
+                <div class="box_left_versionString package_description orangeborderlight">
+                    <ul>
+                        <li>Fire AdVideoComplete when looping, and remove extraneous AdPlaying event from Mp4Player.</li>
+                        <li>Unit tests for MessageBus.</li>
+                        <li>Support ad looping.</li>
+                        <li>Refactor OmidRouter to use MessageBus and add final glue to make the SDK work.</li>
+                        <li>Refactor get and set messages to be sent over MessageBus.</li>
+                        <li>Refactor control messages to be sent over MessageBus.</li>
+                        <li>Fix unit tests, small change to pipeline.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full orange orangebackgroundlight">
+                <div class="box_left_titlebar orangebackground">spotx-nosdk-controller</div>
+                <div class="box_left_versionString">
                     1.7.0
                 </div>
                 <div class="box_left_versionString package_description orangeborderlight">
