spotx-sdk-ios 4.7.0

--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -40,6 +40,24 @@
             <div class="box_full yellow yellowbackgroundlight bold">
                 <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_left_versionString">
+                    4.7.0
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>Fire success/failure response to beacon messages.</li>
+                        <li>Add unit tests for MessageBus and update existing tests that were failing.</li>
+                        <li>Support ad looping.</li>
+                        <li>Refactor native SDK to use MessageBus.</li>
+                        <li>Fix version number in demo apps.</li>
+                        <li>Dark mode support.</li>
+                        <li>Fix GMA adapter crash.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
                     4.6.1
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
