--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -47,6 +47,7 @@
                         <li>Update unit tests for MessageBus.</li>
                         <li>Support ad looping.</li>
                         <li>Refactor native SDK to use MessageBus.</li>
+                        <li>Update OM SDK to version 1.3.3.</li>
                     </ul>
                 </div>
             </div>
