spotx-sdk-android 4.8.0 spotx-sdk-ios 4.8.0

--- a/website/spotx-sdk-android/index.html
+++ b/website/spotx-sdk-android/index.html
@@ -40,14 +40,26 @@
             <div class="box_full peach peachbackgroundlight bold">
                 <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
                 <div class="box_left_versionString">
+                    4.8.0
+                </div>
+                <div class="box_left_versionString package_description peachborderlight">
+                    <ul>
+                        <li>TCF 2.0 Support.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full peach peachbackgroundlight">
+                <div class="box_left_titlebar peachbackground">spotx-sdk-android</div>
+                <div class="box_left_versionString">
                     4.7.0
                 </div>
                 <div class="box_left_versionString package_description peachborderlight">
                     <ul>
+                        <li>Update OM SDK to version 1.3.3.</li>
                         <li>Update unit tests for MessageBus.</li>
                         <li>Support ad looping.</li>
                         <li>Refactor native SDK to use MessageBus.</li>
-                        <li>Update OM SDK to version 1.3.3.</li>
                     </ul>
                 </div>
             </div>
