--- a/website/spotx-sdk-ios/index.html
+++ b/website/spotx-sdk-ios/index.html
@@ -40,6 +40,30 @@
             <div class="box_full yellow yellowbackgroundlight bold">
                 <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
                 <div class="box_left_versionString">
+                    4.8.0
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>TCF 2.0 Support.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
+                    4.7.2
+                </div>
+                <div class="box_left_versionString package_description yellowborderlight">
+                    <ul>
+                        <li>Fix for podding not playing more than one ad when Low Power Mode was enabled on the device.</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="box_full yellow yellowbackgroundlight bold">
+                <div class="box_left_titlebar yellowbackground">spotx-sdk-ios</div>
+                <div class="box_left_versionString">
                     4.7.1
                 </div>
                 <div class="box_left_versionString package_description yellowborderlight">
